add individual errors based on status codes
