# src/models/errors/chatcompletionerror.ts
@@ -1,91 +1,0 @@
-/*
- * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
- */
-
-import * as z from "zod";
-import * as models from "../index.js";
-import { OpenRouterError } from "./openroutererror.js";
-
-/**
- * Chat completion error response
- */
-export type ChatCompletionErrorData = {
-  /**
-   * Error object structure
-   */
-  error: models.ErrorT;
-};
-
-/**
- * Chat completion error response
- */
-export class ChatCompletionError extends OpenRouterError {
-  /**
-   * Error object structure
-   */
-  error: models.ErrorT;
-
-  /** The original data that was passed to this error instance. */
-  data$: ChatCompletionErrorData;
-
-  constructor(
-    err: ChatCompletionErrorData,
-    httpMeta: { response: Response; request: Request; body: string },
-  ) {
-    const message = err.error?.message
-      || `API error occurred: ${JSON.stringify(err)}`;
-    super(message, httpMeta);
-    this.data$ = err;
-    this.error = err.error;
-
-    this.name = "ChatCompletionError";
-  }
-}
-
-/** @internal */
-export const ChatCompletionError$inboundSchema: z.ZodType<
-  ChatCompletionError,
-  z.ZodTypeDef,
-  unknown
-> = z.object({
-  error: z.lazy(() => models.ErrorT$inboundSchema),
-  request$: z.instanceof(Request),
-  response$: z.instanceof(Response),
-  body$: z.string(),
-})
-  .transform((v) => {
-    return new ChatCompletionError(v, {
-      request: v.request$,
-      response: v.response$,
-      body: v.body$,
-    });
-  });
-
-/** @internal */
-export type ChatCompletionError$Outbound = {
-  error: models.ErrorT$Outbound;
-};
-
-/** @internal */
-export const ChatCompletionError$outboundSchema: z.ZodType<
-  ChatCompletionError$Outbound,
-  z.ZodTypeDef,
-  ChatCompletionError
-> = z.instanceof(ChatCompletionError)
-  .transform(v => v.data$)
-  .pipe(z.object({
-    error: z.lazy(() => models.ErrorT$outboundSchema),
-  }));
-
-/**
- * @internal
- * @deprecated This namespace will be removed in future versions. Use schemas and types that are exported directly from this module.
- */
-export namespace ChatCompletionError$ {
-  /** @deprecated use `ChatCompletionError$inboundSchema` instead. */
-  export const inboundSchema = ChatCompletionError$inboundSchema;
-  /** @deprecated use `ChatCompletionError$outboundSchema` instead. */
-  export const outboundSchema = ChatCompletionError$outboundSchema;
-  /** @deprecated use `ChatCompletionError$Outbound` instead. */
-  export type Outbound = ChatCompletionError$Outbound;
-}
