# src/models/errors/index.ts
@@ -2,8 +2,11 @@
  * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
  */
 
-export * from "./chatcompletionerror.js";
 export * from "./httpclienterrors.js";
 export * from "./openrouterdefaulterror.js";
+export * from "./openrouterinvalidrequesterror.js";
+export * from "./openrouterratelimiterror.js";
+export * from "./openrouterservererror.js";
+export * from "./openrouterunauthorizederror.js";
 export * from "./responsevalidationerror.js";
 export * from "./sdkvalidationerror.js";
