# src/models/errors/openrouterratelimiterror.ts
@@ -1,0 +1,91 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod";
+import * as models from "../index.js";
+import { OpenRouterError } from "./openroutererror.js";
+
+/**
+ * OpenRouter rate limit error response
+ */
+export type OpenRouterRateLimitErrorData = {
+  /**
+   * Error object structure
+   */
+  error: models.OpenRouterRateLimitErrorError;
+};
+
+/**
+ * OpenRouter rate limit error response
+ */
+export class OpenRouterRateLimitError extends OpenRouterError {
+  /**
+   * Error object structure
+   */
+  error: models.OpenRouterRateLimitErrorError;
+
+  /** The original data that was passed to this error instance. */
+  data$: OpenRouterRateLimitErrorData;
+
+  constructor(
+    err: OpenRouterRateLimitErrorData,
+    httpMeta: { response: Response; request: Request; body: string },
+  ) {
+    const message = err.error?.message
+      || `API error occurred: ${JSON.stringify(err)}`;
+    super(message, httpMeta);
+    this.data$ = err;
+    this.error = err.error;
+
+    this.name = "OpenRouterRateLimitError";
+  }
+}
+
+/** @internal */
+export const OpenRouterRateLimitError$inboundSchema: z.ZodType<
+  OpenRouterRateLimitError,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  error: z.lazy(() => models.OpenRouterRateLimitErrorError$inboundSchema),
+  request$: z.instanceof(Request),
+  response$: z.instanceof(Response),
+  body$: z.string(),
+})
+  .transform((v) => {
+    return new OpenRouterRateLimitError(v, {
+      request: v.request$,
+      response: v.response$,
+      body: v.body$,
+    });
+  });
+
+/** @internal */
+export type OpenRouterRateLimitError$Outbound = {
+  error: models.OpenRouterRateLimitErrorError$Outbound;
+};
+
+/** @internal */
+export const OpenRouterRateLimitError$outboundSchema: z.ZodType<
+  OpenRouterRateLimitError$Outbound,
+  z.ZodTypeDef,
+  OpenRouterRateLimitError
+> = z.instanceof(OpenRouterRateLimitError)
+  .transform(v => v.data$)
+  .pipe(z.object({
+    error: z.lazy(() => models.OpenRouterRateLimitErrorError$outboundSchema),
+  }));
+
+/**
+ * @internal
+ * @deprecated This namespace will be removed in future versions. Use schemas and types that are exported directly from this module.
+ */
+export namespace OpenRouterRateLimitError$ {
+  /** @deprecated use `OpenRouterRateLimitError$inboundSchema` instead. */
+  export const inboundSchema = OpenRouterRateLimitError$inboundSchema;
+  /** @deprecated use `OpenRouterRateLimitError$outboundSchema` instead. */
+  export const outboundSchema = OpenRouterRateLimitError$outboundSchema;
+  /** @deprecated use `OpenRouterRateLimitError$Outbound` instead. */
+  export type Outbound = OpenRouterRateLimitError$Outbound;
+}
