# src/models/errors/openrouterservererror.ts
@@ -1,0 +1,91 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod";
+import * as models from "../index.js";
+import { OpenRouterError } from "./openroutererror.js";
+
+/**
+ * OpenRouter server error response
+ */
+export type OpenRouterServerErrorData = {
+  /**
+   * Error object structure
+   */
+  error: models.OpenRouterServerErrorError;
+};
+
+/**
+ * OpenRouter server error response
+ */
+export class OpenRouterServerError extends OpenRouterError {
+  /**
+   * Error object structure
+   */
+  error: models.OpenRouterServerErrorError;
+
+  /** The original data that was passed to this error instance. */
+  data$: OpenRouterServerErrorData;
+
+  constructor(
+    err: OpenRouterServerErrorData,
+    httpMeta: { response: Response; request: Request; body: string },
+  ) {
+    const message = err.error?.message
+      || `API error occurred: ${JSON.stringify(err)}`;
+    super(message, httpMeta);
+    this.data$ = err;
+    this.error = err.error;
+
+    this.name = "OpenRouterServerError";
+  }
+}
+
+/** @internal */
+export const OpenRouterServerError$inboundSchema: z.ZodType<
+  OpenRouterServerError,
+  z.ZodTypeDef,
+  unknown
+> = z.object({
+  error: z.lazy(() => models.OpenRouterServerErrorError$inboundSchema),
+  request$: z.instanceof(Request),
+  response$: z.instanceof(Response),
+  body$: z.string(),
+})
+  .transform((v) => {
+    return new OpenRouterServerError(v, {
+      request: v.request$,
+      response: v.response$,
+      body: v.body$,
+    });
+  });
+
+/** @internal */
+export type OpenRouterServerError$Outbound = {
+  error: models.OpenRouterServerErrorError$Outbound;
+};
+
+/** @internal */
+export const OpenRouterServerError$outboundSchema: z.ZodType<
+  OpenRouterServerError$Outbound,
+  z.ZodTypeDef,
+  OpenRouterServerError
+> = z.instanceof(OpenRouterServerError)
+  .transform(v => v.data$)
+  .pipe(z.object({
+    error: z.lazy(() => models.OpenRouterServerErrorError$outboundSchema),
+  }));
+
+/**
+ * @internal
+ * @deprecated This namespace will be removed in future versions. Use schemas and types that are exported directly from this module.
+ */
+export namespace OpenRouterServerError$ {
+  /** @deprecated use `OpenRouterServerError$inboundSchema` instead. */
+  export const inboundSchema = OpenRouterServerError$inboundSchema;
+  /** @deprecated use `OpenRouterServerError$outboundSchema` instead. */
+  export const outboundSchema = OpenRouterServerError$outboundSchema;
+  /** @deprecated use `OpenRouterServerError$Outbound` instead. */
+  export type Outbound = OpenRouterServerError$Outbound;
+}
