# src/models/index.ts
@@ -16,7 +16,6 @@ export * from "./chatcompletioncontentpartaudio.js";
 export * from "./chatcompletioncontentpartimage.js";
 export * from "./chatcompletioncontentparttext.js";
 export * from "./chatcompletioncreateparams.js";
-export * from "./chatcompletionerror.js";
 export * from "./chatcompletionmessage.js";
 export * from "./chatcompletionmessageparam.js";
 export * from "./chatcompletionmessagetoolcall.js";
@@ -30,6 +29,10 @@ export * from "./chatcompletiontoolmessageparam.js";
 export * from "./chatcompletionusermessageparam.js";
 export * from "./completionusage.js";
 export * from "./fileannotationdetail.js";
+export * from "./openrouterinvalidrequesterror.js";
+export * from "./openrouterratelimiterror.js";
+export * from "./openrouterservererror.js";
+export * from "./openrouterunauthorizederror.js";
 export * from "./reasoningdetail.js";
 export * from "./reasoningdetailencrypted.js";
 export * from "./reasoningdetailsummary.js";
